--- a/application-local.yml
+++ b/application-local.yml
@@ -1,7 +1,3 @@
-
-# 微服务，应该使用相同的名称
-spring:
-  application:
-    name: SpringCloud-Config-local-master
-  
-
+# BUS内容
+bus:
+  info: SpringCloudConfig-local-master-version1
