--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,7 +1,3 @@
-
-# 微服务，应该使用相同的名称
-spring:
-  application:
-    name: SpringCloud-Config-prod-master-version1
-  
-
+# BUS内容
+bus:
+  info: SpringCloudConfig-prod-master-version1
